--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=5000
 bootstrap.servers=localhost:9092
-solr.ip=http://localhost:8983/solr
+solr.ip=http://35.154.244.24:8983/solr
 solr.catalog.core=catalog
 solr.clickstream.core=clickstream
 solr.typeahead.core=typeahead
