--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ solr.typeahead.core=typeahead
 solr.concepts.core=concepts
 brand.prediction.host=brand-classifier.herokuapp.com
 brand.prediction.api=/brand_classifier/predict?query={query}&threshold={threshold}&reload={reload}
+brand.train.host=brand-classifier.herokuapp.com
+brand.train.api=/brand_classifier/train
 brand.prediction.threshold=0.2
 p1.prediction.host=p1-classifier.herokuapp.com
 p1.prediction.api=/p1_classifier/predict?query={query}&threshold={threshold}&reload={reload}
