--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ solr.catalog.core=catalog
 solr.clickstream.core=clickstream
 solr.typeahead.core=typeahead
 solr.concepts.core=concepts
-brand.prediction.host=brand-classifier.herokuapp.com
+brand.prediction.host=solr-ml.appspot.com
 brand.prediction.api=/brand_classifier/predict?query={query}&threshold={threshold}&reload={reload}
-brand.train.host=brand-classifier.herokuapp.com
+brand.train.host=solr-ml.appspot.com
 brand.train.api=/brand_classifier/train
 brand.prediction.threshold=0.2
 p1.prediction.host=p1-classifier.herokuapp.com
