--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,11 @@ solr.catalog.core=catalog
 solr.clickstream.core=clickstream
 solr.typeahead.core=typeahead
 solr.concepts.core=concepts
-brand.prediction.host=solr-ml.appspot.com
+brand.prediction.host=35.154.249.187:5001
 brand.prediction.api=/brand_classifier/predict?query={query}&threshold={threshold}&reload={reload}
-brand.train.host=solr-ml.appspot.com
+brand.train.host=35.154.249.187:5001
 brand.train.api=/brand_classifier/train
 brand.prediction.threshold=0.2
-p1.prediction.host=p1-classifier.herokuapp.com
+p1.prediction.host=35.154.249.187:5002
 p1.prediction.api=/p1_classifier/predict?query={query}&threshold={threshold}&reload={reload}
 p1.prediction.threshold=0.5
